bootstrap/tests/errors/duplicate_fn.bmb
// Error test: Duplicate function
// Expected error: duplicate or already defined
fn foo() -> i64 = 1;
fn foo() -> i64 = 2;
fn main() -> i64 = foo();
